--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -10,100 +10,34 @@
 }
 
 .navbar-brand {
-  h2 {
-    font-weight: bold;
-    font-size: 19px;
-    color: colors(deepBlue);
-  }
+
 
   span {
-    color: colors(mint-leaf);
+    color: colors(deepBlue);
+    font-weight: 500;
+    vertical-align: middle;
+    margin-left: -5px;
+  }
+
+  .nav-logo {
+    width: 30px;
+    vertical-align: middle;
+
   }
 }
 
 @include media-breakpoint(sm) {
   .navbar-brand {
+
     h2 {
       font-size: 21px;
     }
   }
 }
 
-.navToggler {
-  background: none;
-  border: none;
+@include media-breakpoint(md) {
+  .navbar-brand {
+    margin: -10px;
 
-  img {
-    width: 25px;
-  }
-}
-
-
-.nav-item {
-  display: flex;
-  align-items: center;
-
-  .primary-btn {
-    text-decoration: none;
-    background-color: colors(mint-leaf);
-    color: colors(white);
-    width: 110px;
-    height: 50px;
-    font-weight: 500;
-    font-size: 12px;
-    padding: 18.5px;
-  }
-
-  .navLink {
-    color: colors(deepBlue);
-    padding-left: 16px;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    cursor: pointer;
-  }
-}
-
-.nav-open {
-  .top {
-    margin-top: 30px;
-    width: 100%;
-
-    button {
-      background: none;
-      border: none;
-      outline: none;
-      position: relative;
-      left: 75%;
-    }
-
-    img {
-      width: 35px;
-    }
-  }
-
-  .links {
-    text-align: center;
-    height: 100%;
-    width: 100%;
-
-    ul {
-      margin-top: 50%;
-
-      li {
-        padding-bottom: 50px;
-
-        a {
-          color: colors(deepBlue);
-          font-weight: 500;
-          font-size: 25px;
-          text-decoration: none;
-
-          &:hover {
-            color: colors(mint-leaf)
-          }
-        }
-      }
-    }
   }
 }
