--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -11,7 +11,6 @@
 
 .navbar-brand {
 
-
   span {
     color: colors(deepBlue);
     font-weight: 500;
@@ -38,6 +37,169 @@
 @include media-breakpoint(md) {
   .navbar-brand {
     margin: -10px;
+
+  }
+}
+
+.navToggler {
+  background: none;
+  border: none;
+
+  img {
+    width: 25px;
+  }
+}
+
+// .main-nav-brand {
+//   @include media-breakpoint(lg) {
+//     margin-top: -50px;
+//   }
+// }
+
+.nav-links-container {
+  position: absolute !important;
+  left: 30% !important;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  // margin-top: -40px;
+
+  .primary-btn {
+    text-decoration: none;
+    background-color: colors(mint-leaf);
+    color: colors(white);
+    width: 110px;
+    height: 50px;
+    font-weight: 500;
+    font-size: 12px;
+    padding: 18.5px;
+  }
+
+  .navLink {
+    color: colors(deepBlue);
+    padding-left: 16px;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+  }
+}
+
+.nav-open {
+  .top {
+    margin-top: 30px;
+    width: 100%;
+
+    button {
+      background: none;
+      border: none;
+      outline: none;
+      position: relative;
+      left: 75%;
+    }
+
+    img {
+      width: 35px;
+    }
+  }
+
+  .links {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+
+    ul {
+      margin-top: 50%;
+
+      li {
+        padding-bottom: 50px;
+
+        a {
+          color: colors(deepBlue);
+          font-weight: 500;
+          font-size: 25px;
+          text-decoration: none;
+
+          &:hover {
+            color: colors(mint-leaf)
+          }
+        }
+      }
+    }
+  }
+}
+
+.isScrolling {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+.nav__profile {
+  margin-top: 10px;
+
+
+  .profile__btn {
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    align-items: center;
+    border-radius: 5px;
+    width: 100px;
+    margin-left: 70px;
+    color: white;
+    position: absolute;
+    font-weight: 500;
+    cursor: pointer;
+
+    &--logout {
+      background-color: red;
+
+
+    }
+  }
+
+  .profile {
+    display: flex;
+    cursor: pointer;
+
+    &__avatar {
+      background-color: colors(deepBlue);
+      width: 45px;
+      height: 45px;
+      color: white;
+      text-align: center;
+      border-radius: 100%;
+      vertical-align: middle;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
+
+    &__name {
+      vertical-align: middle;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 10px;
+      color: colors(deepBlue);
+    }
+
+    span {
+      vertical-align: middle;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
 
   }
 }
