--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,7 +11,7 @@
 @import 'components/input';
 @import 'components/loader';
 @import 'components/navbar';
-
+@import 'components/navModal';
 // @import 'layout/header';
 
 @import 'pages/login';
