--- a/src/assets/styles/pages/_login.scss
+++ b/src/assets/styles/pages/_login.scss
@@ -10,7 +10,7 @@
         transform: translate(-50%, -50%);
         max-height: 100%;
         padding-top: 50px;
-        overflow-y: auto;
+        // overflow-y: auto;
 
         @include big-tablet {
             overflow-y: visible;
