--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -162,16 +162,17 @@
     justify-content: center;
     height: 40px;
     align-items: center;
-    border-radius: 5px;
+    border-radius: 3px;
     width: 100px;
-    margin-left: 5.5%;
+    margin-left: 70px;
+    margin-top: 10px;
     color: white;
     position: absolute;
     font-weight: 500;
     cursor: pointer;
 
     &--logout {
-      background-color: red;
+      background-color: #E01608;
     }
   }
 
