--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -25,5 +25,68 @@
 
             }
         }
+
+        .abt-text {
+            margin-top: 50px;
+            text-align: center;
+            color: colors(blue-gray);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            h1 {
+                width: 90%;
+                line-height: 40px;
+                font-size: 16px;
+                margin-bottom: 20px;
+
+            }
+
+            p {
+                width: 90%;
+                font-size: 14px;
+                line-height: 30px;
+                margin-bottom: 80px;
+            }
+
+            @include media-breakpoint(sm) {
+                p {
+                    width: 80%;
+                    font-size: 16px;
+                }
+
+                h1 {
+                    width: 80%;
+                    font-size: 20px;
+                }
+            }
+
+            @include media-breakpoint(lg) {
+                h1 {
+                    width: 50%;
+                    font-size: 20px;
+
+                }
+
+                p {
+                    width: 50%;
+                    margin-bottom: 20px;
+                }
+            }
+
+        }
+
+        .abt-img {
+            display: flex;
+            justify-content: center;
+
+            @include media-breakpoint(lg) {
+                margin-top: 100px;
+
+                img {
+                    width: 80%;
+                }
+            }
+        }
     }
 }
