done with footer

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'components/loader';
 @import 'components/navbar';
 @import 'components/navModal';
+@import 'components/footer';
 // @import 'layout/header';
 
 @import 'pages/login';
