added tickets card

--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -7,6 +7,9 @@ footer {
   border-top: 0.8px solid lighten($color: colors(ash), $amount: 50);
   color: colors(deepBlue);
   font-weight: 500;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   .logo {
     width: 30px;
