--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'components/navbar';
 @import 'components/navModal';
 @import 'components/footer';
+@import 'components/ticketsCard';
 // @import 'layout/header';
 
 @import 'pages/login';
