--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -79,6 +79,7 @@
         .abt-img {
             display: flex;
             justify-content: center;
+            margin-bottom: 150px;
 
             @include media-breakpoint(lg) {
                 margin-top: 100px;
@@ -86,6 +87,9 @@
                 img {
                     width: 80%;
                 }
+
+                margin-bottom: 200px;
+
             }
         }
     }
