--- a/src/assets/styles/pages/_myTickets.scss
+++ b/src/assets/styles/pages/_myTickets.scss
@@ -4,4 +4,35 @@
     width: 100%;
     overflow-y: auto;
 
+    .body {
+        margin-top: 120px;
+
+        .page-head {
+            margin-bottom: 50px;
+
+            h1 {
+                font-size: 25px;
+                // text-align: center;
+                color: colors(deepBlue);
+            }
+
+            @include big-tablet {
+                margin-top: 0;
+                padding-top: 5px;
+                // margin-left: 300px;
+                margin-bottom: 100px;
+
+                h1 {
+                    text-align: left;
+                    font-weight: 500;
+                    font-size: 42px;
+                }
+            }
+
+            @include desktop {
+                padding-top: 50px;
+                // margin-left: 400px;
+            }
+        }
+    }
 }
