added empty orders

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,7 +14,7 @@
 @import 'components/navModal';
 @import 'components/footer';
 @import 'components/ticketsCard';
-// @import 'layout/header';
+@import 'components/emptyOrders';
 
 @import 'pages/login';
 @import 'pages/notfound';
