--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'components/footer';
 @import 'components/ticketsCard';
 @import 'components/emptyOrders';
+@import './components/tickets';
 
 @import 'pages/login';
 @import 'pages/notfound';
