added tickets table

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,8 @@
 @import 'components/ticketsCard';
 @import 'components/emptyOrders';
 @import './components/tickets';
+@import './components/ticketsTable';
+
 
 @import 'pages/login';
 @import 'pages/notfound';
